<resources>
    <string name="app_name">ViralToolAi</string>
</resources>
